--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,11 +12,11 @@ spring.cloud.gateway.routes[0].predicates[0]=Path=/api/product
   
 # Discovery server route
 spring.cloud.gateway.routes[1].id=discovery-server
-spring.cloud.gateway.routes[1].uri=http://localhost:8761
+spring.cloud.gateway.routes[1].uri=http://discovery-server:8761
 spring.cloud.gateway.routes[1].predicates[0]=Path=/eureka/web
 spring.cloud.gateway.routes[1].filters[0]=SetPath=/
 
 # Discovery server static resource route
 spring.cloud.gateway.routes[2].id=discovery-server-static
-spring.cloud.gateway.routes[2].uri=http://localhost:8761
+spring.cloud.gateway.routes[2].uri=http://discovery-server:8761
 spring.cloud.gateway.routes[2].predicates[0]=Path=/eureka/**
