--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,9 @@
+### Global
 server:
   port: 8080
+### End Global
 
+### Kubernetes
 spring:
   application:
     name: API-GATEWAY
@@ -21,3 +24,40 @@ eureka:
     fetchRegistry: true
     serviceUrl:
       defaultZone: http://eureka-0.eureka.default.svc.cluster.local:8761/eureka
+### End Kubernetes
+
+### Local
+#spring:
+#  application:
+#    name: api-gateway
+#  cloud:
+#    gateway:
+#      routes:
+#        - id: product-service
+#          uri: lb://product-service
+#          predicates:
+#            - Path=/api/product/**
+#        - id: discovery-server
+#          uri: http://discovery-server:8761
+#          predicates:
+#            - Path=/eureka/web
+#          filters:
+#            - SetPath=/
+#        - id: discovery-server-static
+#          uri: http://discovery-server:8761
+#          predicates:
+#            - Path=/eureka/**
+#          filters:
+#            - SetPath=/
+#
+#logging:
+#  level:
+#    root: INFO
+#    org.springframework.cloud.gateway.route.RouteDefinitionLocator: INFO
+#    org.springframework.cloud.gateway: TRACE
+#
+#eureka:
+#  client:
+#    serviceUrl:
+#      defaultZone: http://discovery-server:8761/eureka/
+### End Local
