Added filter for JWT authentication

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -14,6 +14,9 @@ spring:
           uri: lb://PRODUCT-SERVICE
           predicates:
             - Path=/api/product/**
+          filters:
+            - AuthenticationFilter
+
         - id: AUTH-SERVICE
           uri: lb://AUTH-SERVICE
           predicates:
