--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -7,6 +7,11 @@ server:
 spring:
   application:
     name: API-GATEWAY
+  rabbitmq:
+    host: rabbitmq
+    port: 5672
+    username: '${RABBITMQ_DEFAULT_USER:guest}'
+    password: '${RABBITMQ_DEFAULT_PASS:guest}'
   cloud:
     gateway:
       routes:
@@ -26,7 +31,6 @@ spring:
           uri: lb://ORDER-SERVICE
           predicates:
             - Path=/api/order/**
-
 
 eureka:
   instance:
