--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -12,6 +12,7 @@ spring:
     port: 5672
     username: '${RABBITMQ_DEFAULT_USER:guest}'
     password: '${RABBITMQ_DEFAULT_PASS:guest}'
+    management-ui-url: http://rabbitmq:15672
   cloud:
     gateway:
       routes:
