--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -12,7 +12,7 @@ spring:
     port: 5672
     username: '${RABBITMQ_DEFAULT_USER:guest}'
     password: '${RABBITMQ_DEFAULT_PASS:guest}'
-    management-ui-url: http://rabbitmq:15672
+    management-ui-url: http://rabbitmq-15672:15672
   cloud:
     gateway:
       routes:
@@ -33,8 +33,8 @@ spring:
           predicates:
             - Path=/api/order/**
 
-        - id: rabbitmq
-          uri: http://rabbitmq:15672
+        - id: rabbitmq-15672
+          uri: http://rabbitmq-15672:15672
           predicates:
             - Path=/rabbitmq/**
 
