Add back filters

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -19,8 +19,8 @@ spring:
           uri: lb://PRODUCT-SERVICE
           predicates:
             - Path=/api/product/**
-#          filters:
-#            - AuthenticationFilter
+          filters:
+            - AuthenticationFilter
 
         - id: AUTH-SERVICE
           uri: lb://AUTH-SERVICE
@@ -31,6 +31,8 @@ spring:
           uri: lb://ORDER-SERVICE
           predicates:
             - Path=/api/order/**
+          filters:
+            - AuthenticationFilter
 
 eureka:
   instance:
