--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -25,6 +25,8 @@ spring:
           uri: lb://AUTH-SERVICE
           predicates:
             - Path=/api/auth/**
+          filters:
+            - AuthenticationFilter
         - id: ORDER-SERVICE
           uri: lb://ORDER-SERVICE
           predicates:
